plugins/xpath/xpath-lang/testData/xpath/highlighting/types/invalidPath.xpath2
<error descr="Expected type 'node()', got 'xs:string'">token[1]/upper-case(text())</error>/foo